--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="checkout_ui_callback_scheme">checkoutui</string>
 
 
-    <string name="app_name">CronullaRSL</string>
+    <string name="app_name">City Tattersalls</string>
     <string name="default_notification_channel_id">123</string>
     <string name="channel_name">channel_name1</string>
     <string name="channel_description">channel_description1</string>
@@ -29,8 +29,8 @@
     <string name="tab_what_you_win">What you win</string>
     <string name="tab_my_prizes">My Prizes</string>
     <!-- common -->
-    <string name="google_play_store_url">https://play.google.com/store/apps/details?id=com.cronullarsl</string>
-    <string name="update_msg">A new version of CronullaRsl is available. Please update to version </string>
+    <string name="google_play_store_url">https://play.google.com/store/apps/details?id=com.citytratters</string>
+    <string name="update_msg">A new version of City Tattersalls is available. Please update to version </string>
     <string name="update">Update now</string>
     <string name="loading">Loading..</string>
     <string name="no_network_message">No Internet connection. Please try later!</string>
@@ -129,7 +129,7 @@
     <string name="mobile_col">Mobile :</string>
     <string name="mobile">Mobile</string>
     <string name="membership_number">Membership Number</string>
-    <string name="not_you_signin">NOT YOU ? SIGN IN</string>
+    <string name="not_you_signin">NOT YOU ? LOGIN WITH MEMBER NO.</string>
     <string name="suburb">Suburb</string>
     <string name="verification_code">Verification Code</string>
     <string name="we_have_sent_a_verification_code_to_your_n_mobile_number_please_enter_below">We have sent a verification code to your \n mobile number. Please enter below</string>
@@ -138,7 +138,7 @@
     <string name="please_verify_your_identity_to_continue_using_your_device_s_credential">Please verify your identity to continue using your device\'s credential</string>
     <string name="settings">Settings</string>
     <string name="sign_out">Logout</string>
-    <string name="dining">Food and Beverage</string>
+    <string name="dining">Dining</string>
     <string name="function_n_amp_events">Functions &amp; Events</string>
     <string name="function_amd_events">Functions &amp; Events</string>
     <string name="membership">Membership</string>
